<resources>
    <string name="app_name">Sona3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">الصفحة الرئيسية</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="my_form">استمارتي</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="setting">الاعدادات</string>

    <!-- Start   Login Screen Strings  -->
    <string name="login_with_phone_number">تسجيل الدخول برقم الهاتف</string>
    <string name="skip">تخطي</string>

    <string name="image">image</string>
    <string name="enter_your_phone_number">أدخل رقم هاتفك المحمول</string>
    <string name="phone_number">رقم المحمول</string>
    <string name="phone_number2">رقم المحمول 2</string>
    <string name="send_verification_code">ارسل كود التفعيل</string>
    <string name="enter_verification_code">ادخل رقم الكود الذي تم ارساله الى</string>
    <string name="go_on">متابعة</string>
    <string name="unsend_code">لم اتلق رمزًا</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_number">يبدو ان الكود الذي ادخلته غير صحيح</string>
    <string name="change_number">تغيير الرقم</string>
    <string name="login_success">تم التسجيل بنجاح</string>

    <!-- End   Login Screen Strings  -->
    <string name="enter_valid_phone_number">ادخل رقم هاتف صحيح</string>
    <string name="failed_to_send_code">فشل في ارسال الرمز</string>
    <!-- Start    Phone Number screen -->
    <!--End   Phone Number screen -->
    <!-- Start Profile Screen Strings -->
    <string name="name">الاسم</string>
    <string name="type">الصفة</string>
    <string name="address">العنوان</string>
    <string name="national_id">الرقم القومي</string>
    <string name="email">الايميل</string>


    <!-- End Profile Screen Strings -->

    <!--  Start Roles Screen Strings -->
    <string name="next">التالي</string>
    <string name="editor_or_volunteer">محرر/متبرع</string>
    <string name="researcher">باحث</string>
    <string name="reviewer">مراجع</string>
    <string name="verifier">معتمد</string>
    <string name="permissions">الصلاحيات</string>
    <string name="all_done">all done</string>
    <string name="editing_forms">تحرير استمارات</string>
    <string name="show_verified_cases">استعراض الحالات المعتمدة</string>
    <string name="show_search_forms">استعراض وبحث الاستمارات المحررة</string>
    <string name="show_review_forms">استعراض ومراجعة الابحاث</string>
    <string name="show_verify_forms">استعراض واعتماد الابحاث \n التي تم مراجعتها</string>
    <string name="please_wait">انتظر من فضلك</string>
    <string name="education">التعليم</string>
    <string name="workType">نوع العمل</string>
    <string name="workIn">يعمل في</string>
    <string name="smoker">مدخن</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="quran">عدد الاجزاء المحفزظه من القران</string>
    <string name="Excellence">التميز</string>
    <string name="delete">مسح البيانات</string>

    <string name="responsable">العائل </string>
    <string name="addSomeone">اضافه فرد</string>

    <!--  End Roles Screen Strings -->

    <string name="edit">تعديل</string>
    <string name="shared_preference_name">sona3.preference_file_key</string>

    <string name="dialog_role_text">سيتم مراجعه بياناتك والموافقه علي الصلاحية في اقرب وقت ممكن</string>
    <string name="dialog_button_ok">حسنآ</string>
    <string name="father_data">بيانات العائل</string>
    <string name="general_data_for_family">بيانات عامة للأسرة</string>
    <string name="father_name">اسم العائل</string>
    <string name="fatherStatus">صفة العائل</string>
    <string name="village">القرية</string>
    <string name="street">الشارع</string>
    <string name="social_status">الحالة الاجتماعية</string>
    <string name="orphans">ايتام</string>
    <string name="poor">فقراء</string>
    <string name="hasband_abanden">هجر زوج</string>
    <string name="has_debt">غارمين</string>
    <string name="ill">مرضى</string>
    <string name="disabled">ذو قدرات خاصة</string>
    <string name="house_type">نوع السكن</string>
    <string name="house_area">مساحة السكن</string>
    <string name="previous">السابق</string>
    <string name="extra_income">مدخولات اخرى</string>
    <string name="add_info">اضف بيانات</string>
    <string name="income_type">نوع الدخل</string>
    <string name="physical">مادية</string>
    <string name="in_kind">عينية</string>
    <string name="type_of_help">نوع المساعدة</string>
    <string name="value">القيمة</string>
    <string name="delete_data">مسح البيانات</string>
    <string name="add_new_income">أضف مدخولات أخرى</string>
    <string name="family_expenses">نفقات الاسرة</string>
    <string name="type_of_expenses">نوع الانفاق</string>
    <string name="total_of_expenses">اجمالي النفقات</string>
    <string name="family_member_data">بيانات افراد الاسرة</string>
    <string name="family_property">ممتلكات الاسرة</string>
    <string name="all_family_property">ما تملكه الاسرة</string>
    <string name="family_story">قصه الاسرة</string>
    <string name="write_family_story">اكتب قصه الاسرة</string>
    <string name="add_new_person">أضف فرد</string>
    <!-- dummy data -->
    <string-array name="dummy_list">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <!-- Form2 -->
    <string name="hint_name">ادخل الاسم رباعي </string>
    <string name="hint_national_id">ادخل 14 رقم</string>

</resources>