<?xml version="1.0" encoding="utf-8"?><!--
  ~ Last modified 9/22/21 5:58 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EtName"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="110dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/national_id"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <EditText
        android:id="@+id/EtId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EtName" />

    <TextView
        android:id="@+id/tvprofile"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvId" />

    <RelativeLayout
        android:id="@+id/relativeEtprofile"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EtId">
    <EditText
        android:id="@+id/Etprofile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp" />
        <Spinner
            android:id="@+id/sp_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_education"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/education"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvprofile" />

    <RelativeLayout
        android:id="@+id/relativeEt_education"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeEtprofile">
        <EditText
            android:id="@+id/Et_education"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />
        <Spinner
            android:id="@+id/sp_education"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_job"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/job"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_education" />

    <RelativeLayout
        android:id="@+id/relativeEt_job"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeEt_education">
        <EditText
            android:id="@+id/Et_job"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp" />
        <Spinner
            android:id="@+id/sp_job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_smoker"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/smoker"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_job" />
    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/relativeEt_job">
        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/yes"
            android:layout_marginEnd="@dimen/_30dp"
            android:onClick="OnClickRadio"
            />
        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/no"
            android:checked="true"
            android:onClick="OnClickRadio"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_quran"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/quran"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_smoker" />
    <EditText
        android:id="@+id/Et_quran"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup" />

    <TextView
        android:id="@+id/tv_excellent"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/_20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/Excellence"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quran" />
    <EditText
        android:id="@+id/Et_excellent"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Et_quran" />

    <Button
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_50dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:backgroundTint="@color/red"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_30dp"
        app:layout_constraintTop_toBottomOf="@id/Et_excellent" />


</androidx.constraintlayout.widget.ConstraintLayout>